@@ -1,3 +1,6 @@
+05/07/2022 v.6.58 Neha
+	* [ZB-9267] Credit Note for Non-Managed Flats
+
 05/07/2022 v.6.57 Neha
 	* [ZB-9269] Invoice cancelled by system (Tenant Deposit)
 
